loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:5: error: '(' expected but identifier found.
    if estSurBiscuit==true{
       ^Poucet1:8: error: illegal start of simple expression
  }
  ^